--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,7 +6,10 @@ jobs:
   my-first-job:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: hello
         run: echo "Hello world 🎉"
-      - name: this will fail
-        run: exit 1
+      - name: run python script
+        run: |
+          pip install -r requirements.txt
+          python ci.py
