reveal secret len

--- a/.github/workflows/secret.yml
+++ b/.github/workflows/secret.yml
@@ -9,5 +9,8 @@ jobs:
       - name: Reveal
         env:
           MY_PASS: ${{ secrets.MY_SECRET }}
-        run: echo "$MY_PASS"
+        shell: python
+        run: |
+          import os
+          print(len(os.getenv['MY_PASS']))
     
