reveal secret len fix

--- a/.github/workflows/secret.yml
+++ b/.github/workflows/secret.yml
@@ -12,5 +12,5 @@ jobs:
         shell: python
         run: |
           import os
-          print(len(os.getenv['MY_PASS']))
+          print(len(os.getenv('MY_PASS')))
     
