more verbose action

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -28,7 +28,9 @@ jobs:
           cache-env: true
           cache-downloads: true
           
-      - run: | # pytest installation can be done in the conda-environment.yaml
-          micromamba activate course
-          pip install -U pytest
-          pytest
+      - name: Activate Conda environment
+        run: micromamba activate course
+
+      - name: Execute Tests
+        run: pytest
+
