--- a/.github/workflows/bug_ghapi.yaml
+++ b/.github/workflows/bug_ghapi.yaml
@@ -6,7 +6,7 @@ permissions:
   pull-requests: write
 
 jobs:
-  ghapi-exercise:
+  ghapi-bug-labeling:
     # check if the pull request body contains the string "/bug"
     if: (github.event.issue.pull_request != null) && contains(github.event.comment.body, '/bug')
     runs-on: ubuntu-latest
