--- a/.github/workflows/wandb_run_comparator.yaml
+++ b/.github/workflows/wandb_run_comparator.yaml
@@ -25,3 +25,14 @@ jobs:
           PR_NUMBER: ${{ github.event.issue.number }} 
           PR_MESSAGE: ${{ github.event.comment.body }}
           WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
+
+      - name: Add 'experiment-linked' label to PR
+        uses: actions/github-script@v6
+        with:
+          script: |
+            github.rest.issues.addLabels({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              labels: ['experiment-linked']
+            })
